crates/testing/compiletest-integration/tests/ui/if-else-type-mismatch.rs
fn main() -> i64 {
    let x = if true {
        42
    } else {
        "string" //~ ERROR type mismatch in if-else branches
    };
    x
}
